# aiNovel

./: .env.example  .gitignore  AGENTS.md  Claude.md  LICENSE  README.md  pyproject.toml  thaught.md  todo.md  真人感写作指南.txt
.claude/: analysis-report.md  context-initial.md  context-question-1.md  context-web-initial.md  context-web-question-1.md  context-web-question-2.md  context-web-question-3.md  critical-fixes-summary.md  m2-database-summary.md  m4-core-summary.md  m5-workflow-summary.md  operations-log.md  settings.local.json  web-implementation-summary.md
ainovel/: exceptions.py
ainovel/cli/: __init__.py  main.py
ainovel/core/: __init__.py  chapter_generator.py  chapter_rewriter.py  context_compressor.py  genre_data.py  novel_importer.py  outline_generator.py  prompt_manager.py
ainovel/db/: __init__.py  base.py  chapter.py  crud.py  database.py  novel.py  style_profile.py  volume.py
ainovel/llm/: __init__.py  base.py  claude_client.py  cost_tracker.py  exceptions.py  factory.py  openai_client.py  qwen_client.py
ainovel/memory/: __init__.py  character.py  character_db.py  crud.py  lorebook.py  plot_arc.py  rag_retriever.py  world_data.py  world_db.py
ainovel/style/: __init__.py  analyzer.py  applicator.py
ainovel/web/: __init__.py  config.py  dependencies.py  main.py
ainovel/workflow/: __init__.py  (+2 more)
docs/: competitor_analysis_2026-02-24.md  github_ai_novel_projects_analysis_2026-02-24.md  startup_usage_guide.md  web_guide.md
examples/: core_example.py  db_example.py  memory_example.py  workflow_example.py
tests/: __init__.py  test_critical_fixes.py  test_important_fixes.py
(+51 files in other folders)
